ansible/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: hello-web
    namespace: web
spec:
    replicas: 2
    selector:
        matchLabels:
            app: hello-web
    template:
        metadata:
            labels:
                app: hello-web
        spec:
            containers:
                - name: web
                image: ghcr.io/nginxdemos/hello:plain-text
                ports:
                    - containerPort: 80
