ansible/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
    name: hello-web
    namespace: web
spec:
    selector:
        app: hello-web
    ports:
        - port: 80
        targetPort: 80
        protocol: TCP
